# PassGenProBeta

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
src/password_manager/: Cargo.toml
src/test2_backend/: Cargo.toml
src/test2_backend/src/: lib.rs
src/test2_frontend/assets/: main.css
src/test2_frontend/src/: index.html  index.js
