[package]
name = "test2_backend"
version = "0.1.0"
edition = "2018"



[lib]
crate-type = ["cdylib"]
path = "/home/master-chief/Desktop/ICP HACKATHON/test2/src/test2_backend/src/lib.rs"  

[dependencies]
wasm-bindgen = "0.2.76"
js-sys = "0.3.56"
web-sys = "0.3.56"
serde = "1.0"
serde_json = "1.0"

#[profile.dev]
#rustflags = ["-D", "warnings"]
